Botones radio subidos y a la espera de subir el botón refrescar

--- a/ai2_ajax.html
+++ b/ai2_ajax.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="David Menendez">
-    <title>AI2 AJAX DAVID MENENDEZ</title>
+    <title>AI2 AJAX</title>
 </head>
 
 <script src ="js/pizzeria.js"></script>
