--- a/ai2_ajax.html
+++ b/ai2_ajax.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="David Menendez">
+    <meta name="author" content="Grupo ">
+    <link rel="stylesheet" href="estilo.css">
     <title>AI2 AJAX</title>
+
 </head>
 
 <script src ="js/pizzeria.js"></script>
