--- a/ai2_ajax.html
+++ b/ai2_ajax.html
@@ -14,12 +14,13 @@
 <body>
     <h1>PIZZERIA IL PECATTO</h1>
 <!--Aqui se inserta todo el formulario del pedido-->    
-    <div id="divPrincipal"></div><br>
-<!--Botón para procesar el pedido--><br>
+    <div id="divPrincipal"></div>
+<!--Botón para procesar el pedido-->
     <button id="sincronizar" onclick="totalPedido()">Procesar pedido</button>
-
+    <br><br>
 <!--RESULTADO DEL PEDIDO-->
-    <div id="totalizarPedido"></div>
+
+    <div class="total" id="totalizarPedido"></div>
 
 </body>
 </html>
