Subido el botón refrescar (Se ha creado un Div de los campos a los cuales se accede por AJAX para simplificar el proceso de recarga, es decir, que todo el código que se va a recargar lo almaceno en un nodo DIV y así puedo eliminarlo y llamar a la función sin que cree duplicados)

--- a/ai2_ajax.html
+++ b/ai2_ajax.html
@@ -17,6 +17,7 @@
     <div id="divPrincipal"></div>
 <!--Botón para procesar el pedido-->
     <button id="sincronizar" onclick="totalPedido()">Procesar pedido</button>
+    <button id="recargar" onclick="recargaDatos()">Recargar</button>
     <br><br>
 <!--RESULTADO DEL PEDIDO-->
 
